--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -21,7 +21,9 @@
 
     .container:not(.container-1028){
         .row {
-            @include reset-row-spacing(60px);
+            @media (min-width: 768px){
+                @include reset-row-spacing(60px);
+            }
         }
     }
 }
@@ -31,8 +33,10 @@
 .banner-form-wrapper {
     border-radius: 5px;
     background-color: #fff;
-    //background-color: rgba(255, 255, 255, 0.75);
-    padding: 40px 30px;
+    padding: 15px;
+    @include media-breakpoint-up(md){
+        padding: 40px 30px;
+    }
     text-align: center;
     position: relative;
     z-index: 5;
@@ -55,13 +59,15 @@
     }
 
     &.flat-form {
-        padding: 30px 40px 30px;
-        min-width: 1028px;
+        //padding: 30px 40px 30px;
+        @include media-breakpoint-up(lg){
+            min-width: 1028px;
 
-        .dropdown-toggle,
-        #input_postcode {
-            min-width: 230px;
-            max-width: 230px;
+            .dropdown-toggle,
+            #input_postcode {
+                min-width: 230px;
+                max-width: 230px;
+            }
         }
 
         .dropdown-toggle,
@@ -72,6 +78,9 @@
 
         .form-child {
             margin-top: 30px;
+            @media (min-width: 992px){
+                margin-right: 0.5rem;
+            }
         }
 
         #submit_search {
@@ -188,6 +197,7 @@
         max-width: 0;
         visibility: hidden;
         transition: max-width 0.8s ease;
+        @extend .mr-0;
 
         &.revealed-right {
             min-width: 200px;
